[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Platon Floria <platonfloria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^37.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
